# rust-vdl

./: .gitignore  README.md
.github/: FUNDING.yaml
.github/workflows/: build.yml
rust-vdl/: Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json
rust-vdl/src/: constants.rs  dir.rs  hooks.rs  main.rs  state.rs
rust-vdl/src/components/: app.rs  input.rs  mod.rs  options.rs  progress.rs
rust-vdl/src/download/: mod.rs  template.rs  video.rs
rust-vdl/static/config/: log4rs-debug.yml  log4rs.yml
rust-vdl/stylus/: app.styl  buttons.styl  download.styl  main.styl  mixins.styl  options.styl  overrides.styl
