[package]
name = "rust-vdl"
version = "0.1.0"
edition = "2021"
authors = ["Peter Lunneberg"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus"}
directories = "~5"
fermi = { git = "https://github.com/DioxusLabs/dioxus" }
futures = "~0"
regex = "~1.8"
serde = "~1"
serde_json = "~1"
tokio = { version = "~1", features = ["process"] }
tokio-stream = { version = "~0" }
tokio-util = { version = "~0", features = ["codec"] }

[target.'cfg(windows)'.dependencies]
winapi = "~0"
